-- PostgreSQL Version
-- =================================================
-- PACKAGE: PLATFORM
-- CREATE : 2018.11.6
-- UPDATE :
-- =================================================
 
-- AC_UI_PROPERTY 테이블 생성
CREATE TABLE TB_APPLICATION_PROPERTY (
    PROPERTY_NAME VARCHAR(100) NOT NULL, -- 프로퍼티 이름
    PROPERTY_VALUE VARCHAR(1024) NOT NULL, -- 프로퍼티 값
    CONSTRAINT TB_APPLICATION_PROPERTY_PK PRIMARY KEY (PROPERTY_NAME)
);

-- 테이블에 주석 추가 (PostgreSQL에서는 COMMENT 명령 사용)
COMMENT ON TABLE TB_APPLICATION_PROPERTY IS '애플리케이션 전역에서 사용되는 프로퍼티';
COMMENT ON COLUMN TB_APPLICATION_PROPERTY.PROPERTY_NAME IS '프로퍼티 이름';
COMMENT ON COLUMN TB_APPLICATION_PROPERTY.PROPERTY_VALUE IS '프로퍼티 값';

-- AC_UI_SEQUENCER 테이블 생성
CREATE TABLE TB_APPLICATION_SEQUENCER (
    SEQUENCER_ID SERIAL PRIMARY KEY, -- 시퀀서 ID (PostgreSQL에서 SERIAL 사용)
    NAME VARCHAR(100) NOT NULL, -- 시퀀서 이름
    DISPLAY_NAME VARCHAR(255), -- 출력시 보여줄 이름
    VALUE INTEGER NOT NULL -- 시퀀서 값
);

-- NAME 필드에 고유 인덱스 추가
CREATE UNIQUE INDEX TB_APPLICATION_SEQUENCER_UIDX1 ON TB_APPLICATION_SEQUENCER (NAME);

-- 테이블과 컬럼에 주석 추가
COMMENT ON TABLE TB_APPLICATION_SEQUENCER IS '애플리케이션 전역에서 사용되는 시퀀서';
COMMENT ON COLUMN TB_APPLICATION_SEQUENCER.SEQUENCER_ID IS '시퀀서 ID';
COMMENT ON COLUMN TB_APPLICATION_SEQUENCER.NAME IS '시퀀서 이름';
COMMENT ON COLUMN TB_APPLICATION_SEQUENCER.DISPLAY_NAME IS '출력시 보여줄 이름';
COMMENT ON COLUMN TB_APPLICATION_SEQUENCER.VALUE IS '시퀀서 값';
