-- =================================================
-- PACKAGE: SECURITY
-- CREATE : 2025.9.29
-- UPDATE :
-- =================================================

-- spring SECURITY jwt token refresh for postgresql 
CREATE TABLE IF NOT EXISTS TB_APPLICATION_REFRESH_TOKEN (
  ID              BIGSERIAL    PRIMARY KEY,
  USER_ID         BIGINT       NOT NULL,
  SELECTOR        VARCHAR(50)  NOT NULL,      -- 조회용 공개 ID (예: UUID)
  VERIFIER_HASH   VARCHAR(100) NOT NULL,      -- VERIFIER의 BCRYPT 해시(60자 내외)
  EXPIRES_AT      TIMESTAMPTZ  NOT NULL,
  REVOKED         BOOLEAN      NOT NULL DEFAULT FALSE,
  CREATED_AT      TIMESTAMPTZ  NOT NULL DEFAULT NOW(),
  REPLACED_BY_ID  BIGINT       NULL           -- 회전 시 새 토큰 ID (SELF REFERENCE)
);

-- (옵션) 애플리케이션 사용자 테이블과 FK 연결
-- 기존 테이블명이 "TB_APPLICATION_USER" 이고 PK가 "USER_ID" 라면 따옴표 필수
ALTER TABLE TB_APPLICATION_REFRESH_TOKEN
  ADD CONSTRAINT FK_REFRESH_USER
  FOREIGN KEY (USER_ID)
  REFERENCES TB_APPLICATION_USER (USER_ID)
  ON DELETE CASCADE;

-- SELF REFERENCE (회전 체인 추적용)
ALTER TABLE TB_APPLICATION_REFRESH_TOKEN
  ADD CONSTRAINT FK_REFRESH_REPLACED_BY
  FOREIGN KEY (REPLACED_BY_ID)
  REFERENCES TB_APPLICATION_REFRESH_TOKEN (ID)
  ON DELETE SET NULL;

-- 유니크 키: SELECTOR는 고유해야 함
ALTER TABLE TB_APPLICATION_REFRESH_TOKEN
  ADD CONSTRAINT UX_REFRESH_SELECTOR UNIQUE (SELECTOR);

-- 조회/정리 성능 인덱스
CREATE INDEX IF NOT EXISTS IX_REFRESH_USER        ON TB_APPLICATION_REFRESH_TOKEN (USER_ID);
CREATE INDEX IF NOT EXISTS IX_REFRESH_EXPIRES_AT  ON TB_APPLICATION_REFRESH_TOKEN (EXPIRES_AT);

-- 활성 토큰 조회 최적화(부분 인덱스)
CREATE INDEX IF NOT EXISTS IX_REFRESH_ACTIVE
  ON TB_APPLICATION_REFRESH_TOKEN (USER_ID, EXPIRES_AT)
  WHERE REVOKED = FALSE;


-- 비밀전호 재설정 토큰
CREATE TABLE TB_APPLICATION_PASSWORD_RESET_TOKEN (
    ID           BIGSERIAL PRIMARY KEY,
    USER_ID      BIGINT       NOT NULL,
    TOKEN        VARCHAR(200) NOT NULL UNIQUE,
    EXPIRES_AT   TIMESTAMPTZ    NOT NULL,
    USED         BOOLEAN      NOT NULL DEFAULT FALSE,
    CREATED_AT   TIMESTAMPTZ    NOT NULL DEFAULT NOW()
);

ALTER TABLE TB_APPLICATION_PASSWORD_RESET_TOKEN
  ADD CONSTRAINT FK_PASSWORD_RESET_USER
  FOREIGN KEY (USER_ID)
  REFERENCES TB_APPLICATION_USER (USER_ID)
  ON DELETE CASCADE;

