-- =================================================
-- PACKAGE: SECURITY
-- CREATE : 2024.9.12
-- UPDATE :
-- =================================================

 
-- 사용자 테이블
CREATE TABLE TB_APPLICATION_USER (
    USER_ID BIGSERIAL PRIMARY KEY,
    USERNAME VARCHAR(100) NOT NULL UNIQUE,
    PASSWORD_HASH VARCHAR(256) NOT NULL,
    NAME VARCHAR(100),
    NAME_VISIBLE BOOLEAN DEFAULT TRUE,
    FIRST_NAME VARCHAR(100),
    LAST_NAME VARCHAR(100),
    EMAIL VARCHAR(100) NOT NULL UNIQUE,
    EMAIL_VISIBLE BOOLEAN DEFAULT TRUE,
    FAILED_ATTEMPTS INTEGER DEFAULT 0,
    LAST_FAILED_AT TIMESTAMPTZ, 
    ACCOUNT_LOCKED_UNTIL TIMESTAMPTZ NULL,
    USER_ENABLED BOOLEAN DEFAULT TRUE,
    USER_EXTERNAL BOOLEAN DEFAULT FALSE,
    STATUS INTEGER DEFAULT 0,
    CREATION_DATE TIMESTAMPTZ DEFAULT NOW(),
    MODIFIED_DATE TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE TB_APPLICATION_USER IS '사용자 테이블';

CREATE INDEX IF NOT EXISTS IDX_APP_USER_USERNAME ON TB_APPLICATION_USER (USERNAME);
CREATE INDEX IF NOT EXISTS IDX_APP_USER_LOCKED   ON TB_APPLICATION_USER (ACCOUNT_LOCKED);

-- 사용자 속성
CREATE TABLE TB_APPLICATION_USER_PROPERTY (
    USER_ID BIGINT NOT NULL REFERENCES TB_APPLICATION_USER(USER_ID) ON DELETE CASCADE,
    PROPERTY_NAME VARCHAR(100) NOT NULL,
    PROPERTY_VALUE VARCHAR(1024) NOT NULL,
    PRIMARY KEY (USER_ID, PROPERTY_NAME)
);

COMMENT ON TABLE TB_APPLICATION_USER_PROPERTY IS 'USER 프로퍼티 테이블';

-- 롤 테이블
CREATE TABLE TB_APPLICATION_ROLE (
    ROLE_ID BIGSERIAL PRIMARY KEY,
    NAME VARCHAR(100) NOT NULL UNIQUE,
    DESCRIPTION VARCHAR(1000) NOT NULL,
    CREATION_DATE TIMESTAMPTZ DEFAULT NOW(),
    MODIFIED_DATE TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE TB_APPLICATION_ROLE IS '롤 테이블';

-- 사용자 롤 매핑
CREATE TABLE TB_APPLICATION_USER_ROLES (
    USER_ID BIGINT NOT NULL REFERENCES TB_APPLICATION_USER(USER_ID) ON DELETE CASCADE,
    ROLE_ID BIGINT NOT NULL REFERENCES TB_APPLICATION_ROLE(ROLE_ID) ON DELETE CASCADE,
    ASSIGNED_AT TIMESTAMPTZ DEFAULT NOW(),
    ASSIGNED_BY VARCHAR(100),
    PRIMARY KEY (USER_ID, ROLE_ID)
);

COMMENT ON TABLE TB_APPLICATION_USER_ROLES IS '사용자 롤 테이블';

-- 로그인 토큰
CREATE TABLE TB_APPLICATION_LOGIN_TOKEN (
    UUID VARCHAR(100) NOT NULL PRIMARY KEY,
    USERNAME VARCHAR(100) NOT NULL,
    TOKEN VARCHAR(100) NOT NULL,
    LAST_USE_DATE TIMESTAMPTZ DEFAULT NOW() NOT NULL
);

COMMENT ON TABLE TB_APPLICATION_LOGIN_TOKEN IS '인증 정보 저장 테이블';

-- 회사 테이블
CREATE TABLE TB_APPLICATION_COMPANY (
    COMPANY_ID BIGSERIAL PRIMARY KEY,
    DISPLAY_NAME VARCHAR(255) NOT NULL,
    NAME VARCHAR(100) NOT NULL UNIQUE,
    DOMAIN_NAME VARCHAR(100),
    DESCRIPTION VARCHAR(1000),
    CREATION_DATE TIMESTAMPTZ DEFAULT NOW(),
    MODIFIED_DATE TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE TB_APPLICATION_COMPANY IS '회사 테이블';

-- 회사 속성
CREATE TABLE TB_APPLICATION_COMPANY_PROPERTY (
    COMPANY_ID BIGINT NOT NULL REFERENCES TB_APPLICATION_COMPANY(COMPANY_ID) ON DELETE CASCADE,
    PROPERTY_NAME VARCHAR(100) NOT NULL,
    PROPERTY_VALUE VARCHAR(1024) NOT NULL,
    PRIMARY KEY (COMPANY_ID, PROPERTY_NAME)
);

COMMENT ON TABLE TB_APPLICATION_COMPANY_PROPERTY IS '회사 프로퍼티 테이블';

-- 그룹 테이블
CREATE TABLE TB_APPLICATION_GROUP (
    GROUP_ID BIGSERIAL PRIMARY KEY,
    NAME VARCHAR(255) NOT NULL UNIQUE,
    DESCRIPTION VARCHAR(1000),
    CREATION_DATE TIMESTAMPTZ DEFAULT NOW(),
    MODIFIED_DATE TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE TB_APPLICATION_GROUP IS '그룹 테이블';

-- 그룹 속성
CREATE TABLE TB_APPLICATION_GROUP_PROPERTY (
    GROUP_ID BIGINT NOT NULL REFERENCES TB_APPLICATION_GROUP(GROUP_ID) ON DELETE CASCADE,
    PROPERTY_NAME VARCHAR(100) NOT NULL,
    PROPERTY_VALUE VARCHAR(1024) NOT NULL,
    PRIMARY KEY (GROUP_ID, PROPERTY_NAME)
);

COMMENT ON TABLE TB_APPLICATION_GROUP_PROPERTY IS '그룹 프로퍼티 테이블';

-- 그룹 롤 매핑
CREATE TABLE TB_APPLICATION_GROUP_ROLES (
    GROUP_ID BIGINT NOT NULL REFERENCES TB_APPLICATION_GROUP(GROUP_ID) ON DELETE CASCADE,
    ROLE_ID BIGINT NOT NULL REFERENCES TB_APPLICATION_ROLE(ROLE_ID) ON DELETE CASCADE,
    ASSIGNED_AT TIMESTAMPTZ DEFAULT NOW(),
    ASSIGNED_BY VARCHAR(100),
    PRIMARY KEY (GROUP_ID, ROLE_ID)
);

COMMENT ON TABLE TB_APPLICATION_GROUP_ROLES IS '그룹 롤 테이블';

-- 그룹 멤버 매핑
CREATE TABLE TB_APPLICATION_GROUP_MEMBERS (
    GROUP_ID BIGINT NOT NULL REFERENCES TB_APPLICATION_GROUP(GROUP_ID) ON DELETE CASCADE,
    USER_ID BIGINT NOT NULL REFERENCES TB_APPLICATION_USER(USER_ID) ON DELETE CASCADE,
    JOINED_AT TIMESTAMPTZ DEFAULT NOW(),
    JOINED_BY VARCHAR(100),
    PRIMARY KEY (GROUP_ID, USER_ID)
);

COMMENT ON TABLE TB_APPLICATION_GROUP_MEMBERS IS '그룹 멤버 테이블';

